# concrete-core

concrete-core/: Cargo.toml
concrete-core-fixture/src/fixture/: cleartext_vector_creation.rs  glwe_ciphertext_discarding_decryption.rs  glwe_ciphertext_ggsw_ciphertext_discarding_external_product.rs  glwe_ciphertext_ggsw_ciphertext_external_product.rs  glwe_ciphertext_vector_discarding_decryption.rs  glwe_ciphertext_vector_discarding_encryption.rs  glwe_ciphertext_vector_encryption.rs  glwe_ciphertext_vector_zero_encryption.rs  glwe_secret_key_creation.rs  lwe_ciphertext_discarding_bootstrap_2.rs  lwe_ciphertext_discarding_encryption.rs  lwe_ciphertext_discarding_extraction.rs  lwe_ciphertext_vector_decryption.rs  mod.rs
concrete-core-fixture/src/generation/prototyping/: ggsw_ciphertext.rs  glwe_ciphertext_vector.rs
concrete-core-test/src/: core.rs
concrete-core/src/backends/core/implementation/engines/: glwe_secret_key_tensor_product.rs  mod.rs
concrete-core/src/backends/core/private/crypto/bootstrap/fourier/: tests.rs
concrete-core/src/backends/core/private/crypto/glwe/: fourier.rs
concrete-core/src/specification/engines/: glwe_secret_key_creation.rs  glwe_secret_key_tensor_product.rs
concrete-csprng/: Cargo.toml
concrete-csprng/src/: lib.rs
concrete-csprng/src/counter/: mod.rs
concrete-csprng/src/seeders/implem/: external.rs  js.rs  mod.rs
