[package]
name = "concrete-core"
version = "0.1.10"
edition = "2018"
authors = ["D. Ligier", "J.B. Orfila", "A. Péré", "S. Tap", "Zama team"]
license = "BSD-3-Clause-Clear"
description = "Concrete is a fully homomorphic encryption (FHE) library that implements Zama's variant of TFHE."
homepage = "https://crates.io/crates/concrete"
documentation = "https://concrete.zama.ai"
repository = "https://github.com/zama-ai/concrete"
readme = "README.md"
keywords = ["fully", "homomorphic", "encryption", "fhe", "cryptography"]

[dev-dependencies]
concrete-npe = "=0.1.9"
criterion = "0.3.4"
rand = "0.7"
rand_distr = "0.2.2"
kolmogorov_smirnov = "1.1.0"
itertools = "0.10"
serde_test = "1.0.125"

[dependencies]
concrete-fftw = { path = "../../concrete-fftw/concrete-fftw", features=["serialize"] }
concrete-commons = "=0.1.1"
concrete-csprng = { path = "../concrete-csprng"}
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
bincode = "1.3"
rayon = {version = "1.5.0", optional=true}

[lib]
name = "concrete_core"
crate-type = ["cdylib", "rlib"]
bench = false

[features]
slow-csprng = ["concrete-csprng/slow"]
external-seed = ["concrete-csprng/seeder_external_lib"]
multithread = ["rayon", "concrete-csprng/multithread"]

[[bench]]
name = "bench"
harness = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
